src/objects/KS_Configuracion__mdt.object
<CustomObject>
    <fields>
        <fullName>KS_Estado_Producto_Ofertable__c</fullName>
        <label>Estado Producto Ofertable</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_webService_Pass__c</fullName>
        <label>webService_Pass</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_webService_Token__c</fullName>
        <label>webService_Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_webService_User__c</fullName>
        <label>webService_User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Configuración</label>
    <pluralLabel>Configuraciones</pluralLabel>
</CustomObject>